k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: margdarshak-api-svc
  namespace: default
  labels:
    app: margdarshak-api
spec:
  type: ClusterIP
  selector:
    app: margdarshak-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
